# agent-skill-doctor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  action.yml  install.ps1  install.sh  pyproject.toml  release-toolchain.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: design-partner.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  design-partner-signoff.yml  held-out-evaluation.yml  public-preview.yml  release.yml
benchmarks/held-out/: README.md
benchmarks/public/v1/: causal.json  functional.json  manifest.json
benchmarks/results/: 0.1.0.dev0-linux-wsl.json  0.1.0.dev0-windows.json
benchmarks/seed/: manifest.json
docs/: BENCHMARKS_AND_PROVENANCE.md  CASE_STUDY_TEMPLATE.md  COMPATIBILITY.md  DESIGN_PARTNERS.md  DIAGNOSTIC_MODEL.md  DISCOVERY.md  DYNAMIC_TESTING.md  INSTALLATION.md  INTEGRATIONS.md  LAUNCH_KIT.md  PERFORMANCE.md  POLICIES.md  PREVIEW_RELEASE_NOTES.md  PRODUCT.md  RELEASE_PROCESS.md  REPORTING.md  REPRODUCIBLE_BUILDS.md  ROADMAP_STATUS.md  SANDBOX.md  SESSION_EVIDENCE.md  STATE_OF_AGENT_SKILLS.md  THREAT_MODEL.md  WHY_AGENT_SKILLS_FAIL.md
docs/adr/: 0001-python-packaging.md  0002-ipc.md  0003-encryption.md  0004-sandbox.md
examples/broken-skill/: SKILL.md
schemas/: benchmark.schema.json  consent.schema.json  evals.schema.json  event.schema.json  evidence.schema.json  finding.schema.json  functional-benchmark.schema.json  held-out-result.schema.json  job.schema.json  known-sandbox-escapes.schema.json  performance-budgets.schema.json  release-evidence.schema.json  report.schema.json  rule-pack.schema.json  signed-envelope.schema.json  suppressions.schema.json
scripts/: __init__.py  build_standalone.py  create_release_evidence.py  extract_held_out.py  release_manifest.py  run_benchmark.py  run_held_out.py  verify_workflow_source.py
security/: known-sandbox-escapes.json
src/skill_doctor/: __init__.py  __main__.py  analysis.py  benchmark.py  bootstrap.py  causal.py  cli.py  dependencies.py  discovery.py  dynamic_orchestration.py  embedded-rules.json  engine.py  errors.py  evals.py  exporting.py  frontmatter.py  ipc.py  models.py  performance.py  platform_support.py  readiness.py  reporting.py  runtime.py  sandbox.py  security.py  semantic_judge.py  session.py  snapshot.py  store.py  supply_chain.py  suppressions.py  telemetry.py  worker.py  worker_client.py
src/skill_doctor/trust/: release-public-key.pem  revoked-keys.json
tests/: test_analysis.py  test_benchmark_release.py  test_benchmark_security.py  test_benchmarks.py  test_bootstrap.py  test_causal.py  test_cli.py  test_dependencies.py  test_discovery.py  test_discovery_engine.py  test_evals.py  test_exporting.py  test_fault_injection.py  test_frontmatter.py  test_ipc.py  test_performance.py  test_public_functional_benchmark.py  test_public_launch.py  test_readiness.py  test_release_assets.py  test_reporting.py  test_runtime.py  test_sandbox.py  test_schemas.py  test_security.py  test_semantic_judge.py  test_session.py  test_session_engine.py  test_snapshot.py  test_store.py  test_supply_chain.py  test_suppressions.py  test_telemetry.py  test_worker.py  test_workflow_source.py
tests/fixtures/hostile-skill/: SKILL.md
tests/fixtures/valid-skill/: SKILL.md
(+30 files in other folders)
