[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agent-skill-doctor"
version = "0.1.0a1"
description = "Find broken and risky Codex or Claude Code skills locally"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Agent Skill Doctor contributors" }]
keywords = [
    "agent-skills",
    "ai-agents",
    "claude-code",
    "codex",
    "developer-tools",
    "security",
    "static-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "cryptography==49.0.0",
    "secretstorage==3.5.0; sys_platform == 'linux'",
]

[project.scripts]
skill-doctor = "skill_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/awesome-liuxiao/agent-skill-doctor"
Documentation = "https://github.com/awesome-liuxiao/agent-skill-doctor#readme"
Issues = "https://github.com/awesome-liuxiao/agent-skill-doctor/issues"
Changelog = "https://github.com/awesome-liuxiao/agent-skill-doctor/blob/main/CHANGELOG.md"
Source = "https://github.com/awesome-liuxiao/agent-skill-doctor"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_doctor"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "os_credential_store: integration test requiring the host credential facility",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".benchmark-upstream", "benchmarks/public/v1/upstream"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"benchmarks/public/v1/fixtures/**/*.py" = ["S110", "S307"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]
